fix #12